chore: migrate from MIT to Apache 2.0 license
- Update Cargo.toml to specify Apache-2.0 license
- Add complete LICENSE file with Apache 2.0 text
- Add license headers to all source files
- Update README.md to reflect license change

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "mdview"
 version = "0.1.0"
 edition = "2024"
 description = "A terminal-based markdown file viewer"
-license = "MIT"
+license = "Apache-2.0"
 
 [[bin]]
 name = "mdview"
