chore: add author information and project metadata
- Add Ray Krueger as author in Cargo.toml
- Include repository, homepage, and documentation URLs
- Add keywords and categories for better discoverability
- Update copyright notices to reflect authorship

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,8 +2,15 @@
 name = "mdview"
 version = "0.1.0"
 edition = "2024"
+authors = ["Ray Krueger <raykrueger@gmail.com>"]
 description = "A terminal-based markdown file viewer"
 license = "Apache-2.0"
+repository = "https://github.com/raykrueger/mdview"
+homepage = "https://github.com/raykrueger/mdview"
+documentation = "https://github.com/raykrueger/mdview"
+readme = "README.md"
+keywords = ["markdown", "viewer", "terminal", "tui", "cli"]
+categories = ["command-line-utilities", "text-processing"]
 
 [[bin]]
 name = "mdview"
