fix: rename binaries to avoid filename conflicts in release
- Add step to rename binaries with unique platform-specific names
- Prevents 'Not Found' errors when uploading multiple files named 'mdless'

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -77,14 +77,20 @@ jobs:
         with:
           path: artifacts
 
+      - name: Rename binaries to avoid conflicts
+        run: |
+          mv artifacts/mdless-linux-x86_64/mdless artifacts/mdless-linux-x86_64/mdless-linux-x86_64
+          mv artifacts/mdless-macos-x86_64/mdless artifacts/mdless-macos-x86_64/mdless-macos-x86_64
+          mv artifacts/mdless-macos-aarch64/mdless artifacts/mdless-macos-aarch64/mdless-macos-aarch64
+
       - name: Create release
         uses: softprops/action-gh-release@v2
         with:
           files: |
-            artifacts/mdless-linux-x86_64/mdless
+            artifacts/mdless-linux-x86_64/mdless-linux-x86_64
             artifacts/mdless-windows-x86_64.exe/mdless.exe
-            artifacts/mdless-macos-x86_64/mdless
-            artifacts/mdless-macos-aarch64/mdless
+            artifacts/mdless-macos-x86_64/mdless-macos-x86_64
+            artifacts/mdless-macos-aarch64/mdless-macos-aarch64
           generate_release_notes: true
           draft: false
           prerelease: false
