--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,33 @@
-# Rust
-/target/
-**/*.rs.bk
-*.pdb
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+pip-wheel-metadata/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+PIPFILE.lock
+
+# Virtual environments
+venv/
+ENV/
+env/
+.venv
 
 # IDE
 .vscode/
@@ -20,3 +46,6 @@ Thumbs.db
 # Temporary files
 *.tmp
 *.temp
+
+# Archive
+Archive/rust/
